# apostovia

./: .gitignore  LICENSE  Main.hs  README.md  apostovia.cabal  rsync_to_profitoss.sh  shell.nix  stack.yaml  update_local_web.sh
web/resources/: main.css
