name:                apostovia
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/massimo-zaniboni/apostovia#readme
license:             BSD2
license-file:        LICENSE
author:              Massimo Zaniboni
maintainer:          massimo.zaniboni@dokstar.org
copyright:           2010, 2017 Massimo Zaniboni
category:            hobby
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable apostovia
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                       , parsec >= 3 && < 4
                       , containers -any
                       , html -any
                       , unix -any
                       , old-time -any
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/massimo-zaniboni/apostovia
